<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab1_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tab1_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dip" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip"
            android:layout_marginTop="5dip" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="0dip"
                android:height="16dip"
                android:text="@string/add_ip"
                android:width="60dip" >
            </TextView>

            <EditText
                android:id="@+id/FtpIp"
                android:layout_width="2dip"
                android:layout_height="36dip"
                android:layout_marginLeft="1dip"
                android:width="250dip" 
                android:inputType="text"
                >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_type"
                android:width="60dip" >
            </TextView>

            <Spinner
                android:id="@+id/SpinnerFtpType"
                android:layout_width="wrap_content"
                android:layout_height="36dip" >
            </Spinner>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_port"
                android:width="60dip" >
            </TextView>

            <EditText
                android:id="@+id/FtpPort"
                android:layout_width="wrap_content"
                android:layout_height="36dip"
                android:numeric="integer"
                android:width="250dip"
                android:inputType="number"
                 >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_localdir"
                android:width="60dip" >
            </TextView>

            <EditText
                android:id="@+id/FtpLocalDir"
                android:layout_width="wrap_content"
                android:layout_height="36dip"
                android:text="@string/sdcard"
                android:width="250dip"
                android:inputType="text">"
            </EditText>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/BtnSave"
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:layout_margin="2dip"
            android:text="@string/btn_save"
            android:width="60dip" >
        </Button>

        <Button
            android:id="@+id/BtnCancle"
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:layout_margin="2dip"
            android:maxWidth="60dip"
            android:text="@string/btn_cancle"
            android:width="60dip" >
        </Button>
    </LinearLayout>

</LinearLayout>